# pplx-garden

./: Cargo.toml  README.md  pyproject.toml
benchmarks/: bench_all_to_all.py
docs/: fabric-lib.md  unigram.md
fabric-lib/: Cargo.toml
fabric-lib/fabric-debug/src/: main.rs
fabric-lib/src/: api.rs  domain_group.rs  mr.rs  topo.rs
fabric-lib/src/efa/: efa_devinfo.rs  efa_domain.rs  efa_rdma_op.rs
fabric-lib/src/verbs/: verbs_devinfo.rs  verbs_domain.rs  verbs_qp.rs
p2p-all-to-all/a2a-kernels/: build.rs
p2p-all-to-all/a2a-kernels/src/: lib.rs
p2p-all-to-all/a2a-kernels/src/a2a/: a2a_combine_recv.cu  a2a_combine_send.cu  a2a_dispatch_recv.cu  (+2 more)
p2p-all-to-all/src/: a2a_context.rs  a2a_handles.rs  a2a_worker.rs
pplx-unigram/: Cargo.toml
pplx-unigram/examples/: encode.rs
pplx-unigram/src/: config.rs  engine.rs  error.rs  lib.rs  metaspace.rs  normalizer.rs  special_tokens.rs  state.rs  trie.rs
python-ext/: Cargo.toml
python-ext/src/: lib.rs  py_p2p_all_to_all.rs  py_unigram.rs
python/pplx_garden/: unigram.py
python/pplx_garden/distributed/: process_group.py
python/pplx_garden/kernels/: p2p_all_to_all.py
python/pplx_garden/native/: p2p_all_to_all.pyi
rust/cuda-lib/cudart-sys/: build.rs
rust/cuda-lib/src/: cumem.rs  rt.rs
scripts/: run-docker.sh
tests/: README.md  conftest.py  fabric.py  markers.py
tests/fabric_lib/: test_handle.py  test_transfer_engine.py  test_types.py
tests/p2p_all_to_all/: data.py  test_dbo_smoke.py  test_layout.py  test_p2p_all_to_all.py  test_p2p_all_to_all_multinode.py
tests/unigram/: test_python_bindings.py
