[package]
edition = "2024"
name = "pplx-unigram"
version = "0.1.0"
publish = false

[features]
default = ["huge-pages"]
huge-pages = ["dep:libc"]

[dependencies]
serde = { workspace = true }
serde_json = "1"
base64 = "0.22"
thiserror = { workspace = true }
spm_precompiled = "0.1"
unicode-segmentation = "1"
libc = { workspace = true, optional = true }

[[example]]
name = "encode"
path = "examples/encode.rs"
